third_party/move/move-compiler-v2/tests/lambda/inline-parity/bug_10991b.lambda.exp
// -- Model dump before bytecode pipeline
module 0x42::Test {
    private fun foo(g: |(u64, u64)|u64,x: u64,_y: u64): u64 {
        (g)(x, _y)
    }
    public fun test() {
        if Eq<u64>(Test::foo(closure#0Test::test$lambda$1(), 10, 100), 100) {
          Tuple()
        } else {
          Abort(0)
        };
        Tuple()
    }
    private fun test$lambda$1(param$0: u64,y: u64): u64 {
        {
          let _: u64 = param$0;
          y
        }
    }
} // end 0x42::Test

// -- Sourcified model before bytecode pipeline
module 0x42::Test {
    fun foo(g: |(u64, u64)|u64, x: u64, _y: u64): u64 {
        g(x, _y)
    }
    public fun test() {
        if (foo(|(arg0,arg1)| test$lambda$1(arg0, arg1), 10, 100) == 100) () else abort 0;
    }
    fun test$lambda$1(param$0: u64, y: u64): u64 {
        let _ = param$0;
        y
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/bug_10991b.move:4:9
  │
4 │         g(x, _y)
  │         ^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
  ┌─ tests/lambda/inline-parity/bug_10991b.move:8:21
  │
8 │         assert!(foo(|_, y| y,
  │                     ^^^^^^^^
